<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_data"
            android:title="@string/menu_data" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/menu_report" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_menu_change_password"
            android:title="@string/menu_change_password" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
