<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.arfajarsetiaji.digitalprocessmeasurementmobile.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_nav_dashboard_to_nav_data"
            app:popUpTo="@id/nav_data" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_report"
            app:popUpTo="@id/nav_report" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_logout"
            app:popUpTo="@id/nav_login" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_change_password"
            app:popUpTo="@id/nav_change_password" />
    </fragment>
    <fragment
        android:id="@+id/nav_data"
        android:name="com.arfajarsetiaji.digitalprocessmeasurementmobile.ui.data.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/nav_report"
        android:name="com.arfajarsetiaji.digitalprocessmeasurementmobile.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />
    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.arfajarsetiaji.digitalprocessmeasurementmobile.ui.changepassword.ChangePasswordFragment"
        android:label="@string/menu_change_password"
        tools:layout="@layout/fragment_change_password" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.arfajarsetiaji.digitalprocessmeasurementmobile.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_logout_to_nav_dashboard"
            app:popUpTo="@id/nav_dashboard"
            app:launchSingleTop="true" />
    </fragment>
</navigation>