<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv_label_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_report_month"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_label_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_report_rate"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider_2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_label_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_report_index"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider_3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_label_benefit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_report_benefit"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/divider_0"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="?android:attr/listDivider" />


</LinearLayout>